@@ -1,6 +1,7 @@
 v2.12.2
   * workaround bug found in some rubies that caused a segv and/or NoMemoryError
     when deflating content for upload
+  * avoid creating connection thread in unicorn/passenger spawners
 
 v2.12.1
   * fix bug in profile mode
